# MagZero

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: README.md
examples/: README.md
scripts/: amcheck.py  dataprepare.py  dltsplit.py  get_magdir.py  getcrysys.py  getmm.py  inference.py  nearedge.py  process_params.py  processdlt.py  simPBCnet.py  train.py  utils.py
src/magzero/: __init__.py  __main__.py  data_utils.py  forest.py  graph_ops.py  model.py
src/magzero/cli/: inference.py  train.py
tests/: test_config.py  test_package.py
